<resources>
    <!--navigation titles-->
    <string name="app_name">Money Track</string>
    <string name="title_input">Home</string>
    <string name="title_stats">Stats</string>
    <string name="title_settings">Settings</string>

    <!--snack bar-->
    <string name="snack_bar_message">Item Deleted</string>
    <string name="snack_bar_undo">Undo</string>

    <!--input screen-->
    <string name="input_dialog_title">Add New</string>
    <string name="input_amount_hint">Amount</string>
    <string name="input_category_hint">Category</string>
    <string name="input_description_hint">Description</string>
    <string name="category_text">Category: </string>
    <string name="submit">Submit</string>
    <string name="saved">Saved</string>
    <string name="save_failed">Save failed</string>
    <string name="value_smaller_than_zero">Amount must be greater than zero</string>
    <string name="amount_invalid">Invalid Amount Entered</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="total_title">Total: %1$s</string>

    <!--settings screen-->
    <string name="null_category_place_holder_text">No category, add a category to start.</string>
    <string name="add_category_button">Add</string>
    <string name="drop_down_title">Choose a Category</string>
    <string name="no_category_entered">No Category Entered</string>
    <string name="category_already_exists">Category Already Exists</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="change_theme">Change Theme</string>
    <string name="log_out">Log out</string>
    <string name="log_in">Log in</string>
    <string name="use_offline"><u>Use offline</u></string>>
    <string name="about">About</string>>


    <!--stats screen-->
    <string name="expenses_by_category">Expenses By Category</string>
    <string name="expenses_by_date">Expenses By Date</string>
    <string name="tab_tile_daily">By Date</string>
    <string name="tab_title_category">By Category</string>
    <string name="day">Day</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="year">Year</string>

    <string name="January">Jan</string>
    <string name="February">Feb</string>
    <string name="March">Mar</string>
    <string name="April">Apr</string>
    <string name="May">May</string>
    <string name="June">Jun</string>
    <string name="July">Jul</string>
    <string name="August">Aug</string>
    <string name="September">Sept</string>
    <string name="October">Oct</string>
    <string name="November">Nov</string>
    <string name="December">Dec</string>
    <string name="partVsTotal">/total :</string>
    <string name="slash">/</string>
    <string name="analyze_data">Analyze Data</string>
    <string name="data_analysis_title">Data Analysis</string>

    <!--about screen-->
    <string name = "app_version">Version 1.0.0</string>

</resources>
