<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- input view-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:animateLayoutChanges="true">

        <!-- amount -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:focusableInTouchMode="true">

            <EditText
                android:id="@+id/input_amount"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/input_amount_hint"
                android:inputType="numberDecimal"
                android:textSize="@dimen/stats_text_size" />
        </android.support.design.widget.TextInputLayout>

        <!-- category -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:focusableInTouchMode="true">

            <MultiAutoCompleteTextView
                android:id="@+id/input_category"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/input_category_hint"
                android:textSize="@dimen/stats_text_size"
                android:inputType="textAutoComplete" />
        </android.support.design.widget.TextInputLayout>

        <!--error message-->
        <TextView
            android:id="@+id/error_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/InvalidDataError"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            />

        <!--description-->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:focusableInTouchMode="true">

            <EditText
                android:id="@+id/input_description"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:hint="@string/input_description_hint"
                android:ems="10"
                android:inputType="textMultiLine"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="174dp" />
        </android.support.design.widget.TextInputLayout>

        <DatePicker
            android:id="@+id/date_picker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:focusableInTouchMode="true"/>

    </LinearLayout>
</ScrollView>
